スキル追加

--- a/portfolio.html
+++ b/portfolio.html
@@ -150,7 +150,7 @@
           </div>
           <div class="section-body">
             <div class="section-image">
-              <img class="lazyload fadein" data-src="img/about/profile.jpg" alt="">
+              <img class="lazyload fadein" data-src="img/about/KIMG0030.JPG" alt="">
             </div>
             <div class="section-desc">
               <div class="section-text">
@@ -171,7 +171,7 @@
           <div class="section-body card-wrapper">
             <div class="card">
               <div class="skill-icon">
-                <img src="img/skill/icon_skill.png" alt="">
+                <img src="img/skill/HTML5のロゴアイコン.jpeg" alt="">
               </div>
               <div class="skill-desc">
                 <h3 class="skill-desc-title">HTML5/CSS3</h3>
@@ -189,19 +189,6 @@
               <div class="skill-desc">
                 <h3 class="skill-desc-title">JavaScript</h3>
                 <div class="rating">
-                  <div class="rate rate3"></div>
-                </div>
-                <div class="section-text">
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="skill-icon">
-                <img src="img/skill/icon_skill.png" alt="">
-              </div>
-              <div class="skill-desc">
-                <h3 class="skill-desc-title">WordPress</h3>
-                <div class="rating">
                   <div class="rate rate4"></div>
                 </div>
                 <div class="section-text">
@@ -213,7 +200,7 @@
                 <img src="img/skill/icon_skill.png" alt="">
               </div>
               <div class="skill-desc">
-                <h3 class="skill-desc-title">Photoshop</h3>
+                <h3 class="skill-desc-title">Ruby</h3>
                 <div class="rating">
                   <div class="rate rate4"></div>
                 </div>
@@ -223,10 +210,23 @@
             </div>
             <div class="card">
               <div class="skill-icon">
-                <img src="img/skill/icon_skill.png" alt="">
+                <img src="img/skill/HTML5のロゴアイコン.jpeg" alt="">
               </div>
               <div class="skill-desc">
-                <h3 class="skill-desc-title">Illustrator</h3>
+                <h3 class="skill-desc-title">Ruby on Rails</h3>
+                <div class="rating">
+                  <div class="rate rate4"></div>
+                </div>
+                <div class="section-text">
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="skill-icon">
+                <img src="img/skill/icons8-vue-js-48.png" alt="">
+              </div>
+              <div class="skill-desc">
+                <h3 class="skill-desc-title">Vue.js</h3>
                 <div class="rating">
                   <div class="rate rate3"></div>
                 </div>
