サムネの表示

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,8 +52,8 @@
           </div>
           <div class="section-body card-wrapper my-gallery">
             <div class="card">
-              <a href="img/works/company.jpg" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/company.jpg" alt="" />
+              <a href="img/works/company.jpg" data-size="960x720" class="card-image hover-action-01"></a>
+              <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/company.jpg" alt="" />
               </a>
               <div class="card-caption">
                 <div class="card-caption-title">The_sniper</div>
@@ -63,11 +63,11 @@
               </div>
             </div>
             <div class="card">
-              <a href="img/works/hairsalon.jpg" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/hairsalon.jpg" alt="" />
-              </a>
+              <a href="https://gyazo.com/d1c17c01872d61450458c537aa40803c"><img
+                  src="https://i.gyazo.com/d1c17c01872d61450458c537aa40803c.png" alt="Image from Gyazo"
+                  width="1422" /></a>
               <div class="card-caption">
-                <div class="card-caption-title">サイト名が入る</div>
+                <div class="card-caption-title">tube_checker</div>
                 <div class="card-caption-info">Design / Coding(Responsive) </div>
                 <div class="card-caption-url"><a class="url-link" href="https://yahoo.co.jp" target="_blank">Link</a>
                 </div>
@@ -83,8 +83,8 @@
               </div>
             </div>
             <div class="card">
-              <a href="img/works/school.jpg" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/school.jpg" alt="" />
+              <a href="img/works/school.jpg" data-size="960x720" class="card-image hover-action-01"></a>
+              <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/school.jpg" alt="" />
               </a>
               <div class="card-caption">
                 <div class="card-caption-title">サイト名が入る</div>
@@ -154,7 +154,15 @@
             </div>
             <div class="section-desc">
               <div class="section-text">
-                テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br><br>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                中央大学法学部法律学科卒<br>
+                広告代理店勤務を経て、飲食店を起業<br>
+                7年ほど運営しましたが事業からは撤退<br>
+                その後、予備校の講師や派遣業務を経験
+                <br>プログラミングを始めたきっかけは、エンジニアになった友人の影響です。
+                作りたいものが形になることに面白さを感じ、前職在職時にも、業務時間以外はプログラミングに没頭していました。
+                私は、自ら設定した目標に向けて、没頭する人と周囲から言われることが多いです。
+                例えば、予備校講師時代は英語を担当することが多かったですがが、更なる英語力向上のため、cebu留学を経験し、毎日フレーズ参考書や英語プレゼンの動画サイトで英語をインプットし、翌日の授業やスカイプレッスン等の会話で意識的にアウトプットしていました。成果として、2年半でTOEICのスコアを490点から875点まで伸ばすことができました。
+                この興味を持ったことに対して没頭できるという自身の特徴が、エンジニアという職種で活かされるのではないかと考えています。
               </div>
             </div>
           </div>
@@ -165,7 +173,7 @@
           <div class="section-title-area">
             <h2 class="section-title">SKILL</h2>
             <div class="section-intro">
-              エンジニアとして日々スキルアップに精進します
+              エンジニアとして日々スキルアップに精進します.
             </div>
           </div>
           <div class="section-body card-wrapper">
@@ -184,7 +192,7 @@
             </div>
             <div class="card">
               <div class="skill-icon">
-                <img src="img/skill/icon_skill.png" alt="">
+                <img src="img/skill/logo-javascript.svg" alt="">
               </div>
               <div class="skill-desc">
                 <h3 class="skill-desc-title">JavaScript</h3>
@@ -197,7 +205,7 @@
             </div>
             <div class="card">
               <div class="skill-icon">
-                <img src="img/skill/icon_skill.png" alt="">
+                <img src="img/skill/ruby.png" alt="">
               </div>
               <div class="skill-desc">
                 <h3 class="skill-desc-title">Ruby</h3>
@@ -210,7 +218,7 @@
             </div>
             <div class="card">
               <div class="skill-icon">
-                <img src="img/skill/HTML5のロゴアイコン.jpeg" alt="">
+                <img src="img/skill/file_type_rails_icon_130210.png" alt="">
               </div>
               <div class="skill-desc">
                 <h3 class="skill-desc-title">Ruby on Rails</h3>
