--- a/portfolio.html
+++ b/portfolio.html
@@ -63,13 +63,14 @@
               </div>
             </div>
             <div class="card">
-              <a href="https://gyazo.com/d1c17c01872d61450458c537aa40803c"><img
-                  src="https://i.gyazo.com/d1c17c01872d61450458c537aa40803c.png" alt="Image from Gyazo"
-                  width="1422" /></a>
+              <a href="https://gyazo.com/d1c17c01872d61450458c537aa40803c" data-size="960×720"
+                class="card-image hover-action-01"><img src="https://i.gyazo.com/d1c17c01872d61450458c537aa40803c.png"
+                  alt="Image from Gyazo" width="1422" /></a>
               <div class="card-caption">
                 <div class="card-caption-title">tube_checker</div>
                 <div class="card-caption-info">Design / Coding(Responsive) </div>
-                <div class="card-caption-url"><a class="url-link" href="https://yahoo.co.jp" target="_blank">Link</a>
+                <div class="card-caption-url"><a class="url-link" href="https://tubechecker.herokuapp.com/"
+                    target="_blank">Link</a>
                 </div>
               </div>
             </div>
@@ -187,7 +188,7 @@
                   <div class="rate rate4"></div>
                 </div>
                 <div class="section-text">
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                  HamlやSassを含め、基本的なコーディングは問題ありません。BEMも意識してコーディングしています。レスポンシブは現在学習中です。使用エディタはVisualStudioCodeです</div>
               </div>
             </div>
             <div class="card">
@@ -275,7 +276,7 @@
                 <li><a href="https://www.facebook.com/" target="_blank"><img src="img/contact/icon_fb.png" alt=""></a>
                 </li>
               </ul>
-              <div class="contact-other">xxxxxx@gmail.com</div>
+              <div class="contact-other">higaki.keichan@gmail.com</div>
             </div>
           </div>
         </div>
