--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
     <header id="header">
       <div class="inner">
         <h1 class="logo">
-          <div class="logo-title">Keita Higaki</div>
+          <div class="logo-title">ひがき　けいた</div>
           <div class="logo-desc">PORTFOLIO</div>
         </h1>
       </div>
@@ -52,13 +52,14 @@
           </div>
           <div class="section-body card-wrapper my-gallery">
             <div class="card">
-              <a href="img/works/company.jpg" data-size="960x720" class="card-image hover-action-01"></a>
-              <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/company.jpg" alt="" />
-              </a>
+              <a href="https://gyazo.com/d2636ee42da40d6105e535d7cac4f90e" data-size="960×720"
+                class="card-image hover-action-01"><img src="https://i.gyazo.com/d2636ee42da40d6105e535d7cac4f90e.png"
+                  alt="Image from Gyazo" width="1429" /></a>
               <div class="card-caption">
                 <div class="card-caption-title">The_sniper</div>
                 <div class="card-caption-info">Design / Coding(Responsive) / Rails５×Vue.js</div>
-                <div class="card-caption-url"><a class="url-link" href="https://yahoo.co.jp" target="_blank">Link</a>
+                <div class="card-caption-url"><a class="url-link" href="https://thesniper.herokuapp.com/"
+                    target="_blank">Link</a>
                 </div>
               </div>
             </div>
@@ -79,7 +80,7 @@
                 <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/girly.jpg" alt="" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">サイト名が入る</div>
+                <div class="card-caption-title">Keistagram</div>
                 <div class="card-caption-info">Design</div>
               </div>
             </div>
@@ -88,7 +89,7 @@
               <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/school.jpg" alt="" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">サイト名が入る</div>
+                <div class="card-caption-title">freemarket</div>
                 <div class="card-caption-info">Design</div>
               </div>
             </div>
@@ -97,7 +98,7 @@
                 <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/game.jpg" alt="" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">サイト名が入る</div>
+                <div class="card-caption-title">chat-space</div>
                 <div class="card-caption-info">Design</div>
               </div>
             </div>
@@ -174,7 +175,8 @@
           <div class="section-title-area">
             <h2 class="section-title">SKILL</h2>
             <div class="section-intro">
-              エンジニアとして日々スキルアップに精進します.
+              日常で感じるあったらいいなを実現するアプリを作成できるようになるためプログラミングを学習中です。
+              <br>エンジニアとして日々スキルアップに精進します.
             </div>
           </div>
           <div class="section-body card-wrapper">
@@ -201,7 +203,7 @@
                   <div class="rate rate4"></div>
                 </div>
                 <div class="section-text">
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                  あまり複雑なコードをスクラッチから書くことはできませんが、ライブラリの実装や基本的なコード（jQuery）は問題なく書けます。</div>
               </div>
             </div>
             <div class="card">
@@ -214,7 +216,7 @@
                   <div class="rate rate4"></div>
                 </div>
                 <div class="section-text">
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                  現在Rubyを主言語として開発学習を行なっています。</div>
               </div>
             </div>
             <div class="card">
@@ -227,7 +229,7 @@
                   <div class="rate rate4"></div>
                 </div>
                 <div class="section-text">
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                  Railsのフレームワークで開発学習を行なっています。テストコードはRspacを使用しています。</div>
               </div>
             </div>
             <div class="card">
@@ -246,15 +248,15 @@
             </div>
             <div class="card">
               <div class="skill-icon">
-                <img src="img/skill/icon_skill.png" alt="">
+                <img src="img/skill/icons8-github-192.png" alt="">
               </div>
               <div class="skill-desc">
-                <h3 class="skill-desc-title">XD</h3>
+                <h3 class="skill-desc-title">Github</h3>
                 <div class="rating">
-                  <div class="rate rate3"></div>
+                  <div class="rate rate4"></div>
                 </div>
                 <div class="section-text">
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                  チーム開発において
                 </div>
               </div>
             </div>
