--- a/portfolio.html
+++ b/portfolio.html
@@ -76,26 +76,29 @@
               </div>
             </div>
             <div class="card">
-              <a href="img/works/girly.jpg" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/girly.jpg" alt="" />
-              </a>
+              <a href="https://gyazo.com/ffacdf5551d1776c5dc6abe223d7da1b" data-size="960×720"
+                class="card-image hover-action-01"><img src="https://i.gyazo.com/ffacdf5551d1776c5dc6abe223d7da1b.png"
+                  alt="Image from Gyazo" width="1421" /></a>
               <div class="card-caption">
                 <div class="card-caption-title">Keistagram</div>
-                <div class="card-caption-info">Design</div>
+                <div class="card-caption-info">Ruby on Rails</div>
               </div>
             </div>
             <div class="card">
-              <a href="img/works/school.jpg" data-size="960x720" class="card-image hover-action-01"></a>
-              <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/school.jpg" alt="" />
-              </a>
+              <a href="https://gyazo.com/65ed924734d71ff94f63e52d9623b1c2" data-size="960×720"
+                class="card-image hover-action-01"><img src="https://i.gyazo.com/65ed924734d71ff94f63e52d9623b1c2.png"
+                  alt="Image from Gyazo" width="1429" /></a>
               <div class="card-caption">
                 <div class="card-caption-title">freemarket</div>
-                <div class="card-caption-info">Design</div>
+                <div class="card-caption-info">Ruby on Rails×Jquery×AWS</div>
+                <div class="card-caption-url"><a class="url-link" href="http://18.176.134.115/" target="_blank">Link</a>
+                </div>
               </div>
+
             </div>
             <div class="card">
               <a href="img/works/game.jpg" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/game.jpg" alt="" />
+                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/company.jpg" alt="" />
               </a>
               <div class="card-caption">
                 <div class="card-caption-title">chat-space</div>
@@ -104,7 +107,7 @@
             </div>
             <div class="card">
               <a href="img/works/fashion.jpg" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/fashion.jpg" alt="" />
+                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/company.jpg" alt="" />
               </a>
               <div class="card-caption">
                 <div class="card-caption-title">サイト名が入る</div>
@@ -124,15 +127,15 @@
           </div>
           <div class="section-body">
             <div class="section-image">
-              <a href="https://webdesigner-go.com/" class="hover-action-01" target="_blank"><img
+              <a href="https://thesniper.herokuapp.com/" class="hover-action-01" target="_blank"><img
                   src="img/feature/feature.jpg" alt=""></a>
             </div>
             <div class="section-desc">
               <div class="section-text">
-                <span class="text-bold">サイト名：</span><br>サイト名が入る<br><a href="#"
-                  target="_blank">https://●●●.com</a><br><br>
-                <span class="text-bold">担当：</span><br>Design / Coding (Responsive) / WordPress /
-                Writing<br>
+                <span class="text-bold">スニペットアプリ：</span><br>the_sniper<br><a href="#"
+                  target="_blank">https://thesniper.herokuapp.com/</a><br><br>
+                <span class="text-bold">使用技術：</span><br>Ruby on Rails
+                Vue.js<br>
                 <br>
                 <span
                   class="text-bold">コメント：</span><br>テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br><br>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br><br>
@@ -256,7 +259,7 @@
                   <div class="rate rate4"></div>
                 </div>
                 <div class="section-text">
-                  チーム開発において
+                  チーム開発においてバージョン管理及び機能追加、バグ修正のために活用しました。
                 </div>
               </div>
             </div>
