--- a/portfolio.html
+++ b/portfolio.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <meta property='og:type' content='website'>
-  <meta property='og:title' content='WebデザイナーTARO YAMADA ポートフォリオ'>
+  <meta property='og:title' content='WebデザイナーKeita Higaki ポートフォリオ'>
   <meta property='og:url' content='URLが入る'>
-  <meta property='og:description' content='Webデザイナー TARO YAMADAのポートフォリオサイトです！'>
+  <meta property='og:description' content='Webデザイナー Keita Higakiのポートフォリオサイトです！'>
   <meta property="og:image" content="img/ogp.png">
-  <meta name="description" content="Webデザイナー TARO YAMADAのポートフォリオサイトです！" />
-  <title>Webデザイナー TARO YAMADA ポートフォリオ</title>
+  <meta name="description" content="Webデザイナー Keita Higakiのポートフォリオサイトです！" />
+  <title>Webデザイナー Keita Higaki ポートフォリオ</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
   <link href="css/reset.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/photoswipe/photoswipe.css" media="all" rel="stylesheet" type="text/css" />
@@ -34,7 +34,7 @@
     <header id="header">
       <div class="inner">
         <h1 class="logo">
-          <div class="logo-title">ひがき　けいた</div>
+          <div class="logo-title">ひがき けいた</div>
           <div class="logo-desc">PORTFOLIO</div>
         </h1>
       </div>
@@ -46,7 +46,7 @@
             <h2 class="section-title">WORKS</h2>
             <div class="section-intro">
               <div class="section-text">
-                Web（デザインとコーディング）制作の記録です。<br class="pc">デザイン練習用の架空サイト（ファーストビューのみ）も含んでおります。
+                Webアプリ制作の記録です。<br class="pc">プログラミング練習用の架空サイト（ファーストビューのみ）も含んでおります。
               </div>
             </div>
           </div>
@@ -110,8 +110,11 @@
                 <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/company.jpg" alt="" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">サイト名が入る</div>
-                <div class="card-caption-info">Design</div>
+                <div class="card-caption-title">like_sample</div>
+                <div class="card-caption-info">Ruby on Rails </div>
+                <div class="card-caption-url"><a class="url-link" href="https://likesample.herokuapp.com/"
+                    target="_blank">Link</a>
+                </div>
               </div>
             </div>
           </div>
@@ -260,6 +263,34 @@
                 </div>
                 <div class="section-text">
                   チーム開発においてバージョン管理及び機能追加、バグ修正のために活用しました。
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="skill-icon">
+                <img src="img/skill/icons8-vue-js-48.png" alt="">
+              </div>
+              <div class="skill-desc">
+                <h3 class="skill-desc-title">AWS</h3>
+                <div class="rating">
+                  <div class="rate rate4"></div>
+                </div>
+                <div class="section-text">
+                  制作したアプリケーションはAWS
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="skill-icon">
+                <img src="img/skill//google_firebase_icon-icons.com_61474.png" alt="">
+              </div>
+              <div class="skill-desc">
+                <h3 class="skill-desc-title">Firebase</h3>
+                <div class="rating">
+                  <div class="rate rate3"></div>
+                </div>
+                <div class="section-text">
+                  静的なページをデプロイするために学習しています
                 </div>
               </div>
             </div>
