メタの変更

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <meta property='og:type' content='website'>
-  <meta property='og:title' content='WebデザイナーKeita Higaki ポートフォリオ'>
+  <meta property='og:title' content='Webエンジニア　Keita Higaki ポートフォリオ'>
   <meta property='og:url' content='URLが入る'>
-  <meta property='og:description' content='Webデザイナー Keita Higakiのポートフォリオサイトです！'>
+  <meta property='og:description' content='Webエンジニア Keita Higakiのポートフォリオサイトです！'>
   <meta property="og:image" content="img/ogp.png">
-  <meta name="description" content="Webデザイナー Keita Higakiのポートフォリオサイトです！" />
-  <title>Webデザイナー Keita Higaki ポートフォリオ</title>
+  <meta name="description" content="Webエンジニア Keita Higakiのポートフォリオサイトです！" />
+  <title>Webエンジニア Keita Higaki ポートフォリオ</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
   <link href="css/reset.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/photoswipe/photoswipe.css" media="all" rel="stylesheet" type="text/css" />
