ロゴ再変更

--- a/portfolio.html
+++ b/portfolio.html
@@ -309,8 +309,7 @@
               <ul>
                 <li><a href="https://twitter.com/" target="_blank"><img src="img/contact/icon_tw.png" alt=""></a>
                 </li>
-                <li><a href="https://www.facebook.com/" target="_blank"><img src="img/contact/logo-background-color.png"
-                      alt=""></a>
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="img/contact/icon_fb.png" alt=""></a>
                 </li>
               </ul>
               <div class="contact-other">higaki.keichan@gmail.com</div>
