スキルコメント変更

--- a/portfolio.html
+++ b/portfolio.html
@@ -248,7 +248,7 @@
                   <div class="rate rate3"></div>
                 </div>
                 <div class="section-text">
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                  静的ページのフレームワークとして学習中です
                 </div>
               </div>
             </div>
@@ -276,7 +276,7 @@
                   <div class="rate rate4"></div>
                 </div>
                 <div class="section-text">
-                  制作したアプリケーションはAWS
+                  チーム開発の制作物はAWSにてアップロードしています
                 </div>
               </div>
             </div>
