自己紹介修正

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
               </a>
               <div class="card-caption">
                 <div class="card-caption-title">chat-space</div>
-                <div class="card-caption-info">Design</div>
+                <div class="card-caption-info">Ruby on Rails </div>
               </div>
             </div>
             <div class="card">
@@ -165,9 +165,10 @@
                 中央大学法学部法律学科卒<br>
                 広告代理店勤務を経て、飲食店を起業<br>
                 7年ほど運営しましたが事業からは撤退<br>
-                その後、予備校の講師や派遣業務を経験
+                その後、予備校の講師や派遣業務を経験<br>
+                いろんな経験をしたおかげでもう失うものなんてないんじゃないかと(笑)
                 <br>プログラミングを始めたきっかけは、エンジニアになった友人の影響です。
-                作りたいものが形になることに面白さを感じ、前職在職時にも、業務時間以外はプログラミングに没頭していました。
+                作りたいものが形になることに面白さを感じています。
                 私は、自ら設定した目標に向けて、没頭する人と周囲から言われることが多いです。
                 例えば、予備校講師時代は英語を担当することが多かったですがが、更なる英語力向上のため、cebu留学を経験し、毎日フレーズ参考書や英語プレゼンの動画サイトで英語をインプットし、翌日の授業やスカイプレッスン等の会話で意識的にアウトプットしていました。成果として、2年半でTOEICのスコアを490点から875点まで伸ばすことができました。
                 この興味を持ったことに対して没頭できるという自身の特徴が、エンジニアという職種で活かされるのではないかと考えています。
