--- a/portfolio.html
+++ b/portfolio.html
@@ -300,23 +300,37 @@
       <section class="section" id="contact">
         <div class="inner">
           <div class="section-title-area">
-            <h2 class="section-title">CONTACT</h2>
+            <h2 class="section-title">OUTPUTS</h2>
             <div class="section-intro">
-              お問い合わせは、SNSかメールでお願いいたします。
+              日々の技術を積み重ねています
             </div>
           </div>
-          <div class="section-body contact-wrapper">
-            <div class="contact-list">
-              <ul>
-                <li><a href="https://twitter.com/" target="_blank"><img src="img/contact/icon_tw.png" alt=""></a>
-                </li>
-                <li><a href="https://www.facebook.com/" target="_blank"><img src="img/contact/icon_fb.png" alt=""></a>
-                </li>
-              </ul>
-              <div class="contact-other">higaki.keichan@gmail.com</div>
+          <div class="output-list">
+            <ul>
+              <li><a href="https://twitter.com/" target="_blank"><img
+                    src="img/contact/qiita-png/logo-effect-background-color.png" alt=""></a>
+              </li>
+              <li><a href="https://www.facebook.com/" target="_blank"><img src="img/contact/icon_fb.png" alt=""></a>
+              </li>
+            </ul>
+            <div class="section-title-area">
+              <h2 class="section-title">CONTACT</h2>
+              <div class="section-intro">
+                お問い合わせは、SNSかメールでお願いいたします。
+              </div>
+            </div>
+            <div class="section-body contact-wrapper">
+              <div class="contact-list">
+                <ul>
+                  <li><a href="https://twitter.com/" target="_blank"><img src="img/contact/icon_tw.png" alt=""></a>
+                  </li>
+                  <li><a href="https://www.facebook.com/" target="_blank"><img src="img/contact/icon_fb.png" alt=""></a>
+                  </li>
+                </ul>
+                <div class="contact-other">higaki.keichan@gmail.com</div>
+              </div>
             </div>
           </div>
-        </div>
       </section>
     </main>
     <footer id="footer">
