ビュー調整

--- a/portfolio.html
+++ b/portfolio.html
@@ -310,7 +310,8 @@
               <li><a href="https://twitter.com/" target="_blank"><img
                     src="img/contact/qiita-png/logo-effect-background-color.png" alt=""></a>
               </li>
-              <li><a href="https://www.facebook.com/" target="_blank"><img src="img/contact/icon_fb.png" alt=""></a>
+              <li><a href="https://www.facebook.com/" target="_blank"><img src="img/contact/GitHub-Mark-120px-plus.png"
+                    alt=""></a>
               </li>
             </ul>
             <div class="section-title-area">
@@ -324,6 +325,7 @@
                 <ul>
                   <li><a href="https://twitter.com/" target="_blank"><img src="img/contact/icon_tw.png" alt=""></a>
                   </li>
+
                   <li><a href="https://www.facebook.com/" target="_blank"><img src="img/contact/icon_fb.png" alt=""></a>
                   </li>
                 </ul>
