--- a/portfolio.html
+++ b/portfolio.html
@@ -307,11 +307,11 @@
           </div>
           <div class="output-list">
             <ul>
-              <li><a href="https://twitter.com/" target="_blank"><img
+              <li><a href="https://qiita.com/keitah.com/" target="_blank"><img
                     src="img/contact/qiita-png/logo-effect-background-color.png" alt=""></a>
               </li>
-              <li><a href="https://www.facebook.com/" target="_blank"><img src="img/contact/GitHub-Mark-120px-plus.png"
-                    alt=""></a>
+              <li><a href="https://github.com/higakikeita" target="_blank"><img
+                    src="img/contact/GitHub-Mark-120px-plus.png" alt=""></a>
               </li>
             </ul>
             <div class="section-title-area">
