--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,7 @@
         <li><a href="#feature">FEATURE</a></li>
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#skill">SKILL</a></li>
+        <li><a href="#output">OUTPUT</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
     </nav>
@@ -297,7 +298,7 @@
             </div>
           </div>
       </section>
-      <section class="section" id="contact">
+      <section class="section" id="output">
         <div class="inner">
           <div class="section-title-area">
             <h2 class="section-title">OUTPUTS</h2>
@@ -314,26 +315,29 @@
                     src="img/contact/GitHub-Mark-120px-plus.png" alt=""></a>
               </li>
             </ul>
-            <div class="section-title-area">
-              <h2 class="section-title">CONTACT</h2>
-              <div class="section-intro">
-                お問い合わせは、SNSかメールでお願いいたします。
-              </div>
-            </div>
-            <div class="section-body contact-wrapper">
-              <div class="contact-list">
-                <ul>
-                  <li><a href="https://twitter.com/" target="_blank"><img src="img/contact/icon_tw.png" alt=""></a>
-                  </li>
+            <section class="section" id="contact">
+              <div class="inner">
+                <div class="section-title-area">
+                  <h2 class="section-title">CONTACT</h2>
+                  <div class="section-intro">
+                    お問い合わせは、SNSかメールでお願いいたします。
+                  </div>
+                </div>
+                <div class="section-body contact-wrapper">
+                  <div class="contact-list">
+                    <ul>
+                      <li><a href="https://twitter.com/" target="_blank"><img src="img/contact/icon_tw.png" alt=""></a>
+                      </li>
 
-                  <li><a href="https://www.facebook.com/" target="_blank"><img src="img/contact/icon_fb.png" alt=""></a>
-                  </li>
-                </ul>
-                <div class="contact-other">higaki.keichan@gmail.com</div>
+                      <li><a href="https://www.facebook.com/" target="_blank"><img src="img/contact/icon_fb.png"
+                            alt=""></a>
+                      </li>
+                    </ul>
+                    <div class="contact-other">higaki.keichan@gmail.com</div>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-      </section>
+            </section>
     </main>
     <footer id="footer">
       <div class="pageTop">
