--- a/portfolio.html
+++ b/portfolio.html
@@ -270,7 +270,7 @@
             </div>
             <div class="card">
               <div class="skill-icon">
-                <img src="img/skill/icons8-vue-js-48.png" alt="">
+                <img src="img/contact/aws.png" alt="">
               </div>
               <div class="skill-desc">
                 <h3 class="skill-desc-title">AWS</h3>
