--- a/portfolio.html
+++ b/portfolio.html
@@ -132,7 +132,7 @@
           <div class="section-body">
             <div class="section-image">
               <a href="https://thesniper.herokuapp.com/" class="hover-action-01" target="_blank"><img
-                  src="img/feature/feature.jpg" alt=""></a>
+                  src="img/feature/Snip20200227_2.png" alt=""></a>
             </div>
             <div class="section-desc">
               <div class="section-text">
@@ -141,9 +141,14 @@
                 <span class="text-bold">使用技術：</span><br>Ruby on Rails
                 Vue.js<br>
                 <br>
-                <span
-                  class="text-bold">コメント：</span><br>テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br><br>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br><br>
-                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br><br>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                <span class="text-bold">version：</span><br>Ruby 2.5.1
+                Ruby on Rails 5.2.3
+                SQLite 3.28.0
+                Vue.js 2.6.10
+                Vuetify 1.5<br>
+                <br>Rails の Scaffold を利用して、CRUD 機能を実装しています<br>本番環境のDB:PostgreSQL<br>主要機能<br>
+                メモ投稿機能/投稿更新機能/投稿削除機能/<br>
+                Vue.jsによる非同期通信/投稿のためのモーダルWindow/表示絞り込み機能１／表示絞り込み機能2/マークダウン表示<br>
               </div>
             </div>
           </div>
