--- a/portfolio.html
+++ b/portfolio.html
@@ -141,10 +141,10 @@
                 <span class="text-bold">使用技術：</span><br>Ruby on Rails
                 Vue.js<br>
                 <br>
-                <span class="text-bold">version：</span><br>Ruby 2.5.1
-                Ruby on Rails 5.2.3
-                SQLite 3.28.0
-                Vue.js 2.6.10
+                <span class="text-bold">version：</span><br>Ruby 2.5.1<br>
+                Ruby on Rails 5.2.3<br>
+                SQLite 3.28.0<br>
+                Vue.js 2.6.10<br>
                 Vuetify 1.5<br>
                 <br>Rails の Scaffold を利用して、CRUD 機能を実装しています<br>本番環境のDB:PostgreSQL<br>主要機能<br>
                 メモ投稿機能/投稿更新機能/投稿削除機能/<br>
