プロフィール写真の修正

--- a/portfolio.html
+++ b/portfolio.html
@@ -164,7 +164,7 @@
           </div>
           <div class="section-body">
             <div class="section-image">
-              <img class="lazyload fadein" data-src="img/about/KIMG0030.JPG" alt="">
+              <img class="lazyload fadein" data-src="img/about/IMG_-jujchm.jpg" alt="">
             </div>
             <div class="section-desc">
               <div class="section-text">
