--- a/portfolio.html
+++ b/portfolio.html
@@ -159,7 +159,7 @@
           <div class="section-title-area">
             <h2 class="section-title">ABOUT</h2>
             <div class="section-intro">
-              こんにちは！
+              こんばんわ!
             </div>
           </div>
           <div class="section-body">
