--- a/portfolio.html
+++ b/portfolio.html
@@ -98,12 +98,17 @@
 
             </div>
             <div class="card">
-              <a href="img/works/game.jpg" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/company.jpg" alt="" />
+              <a href="https://i.gyazo.com/41fe34ff72cb4c869f590b5ea05811fd.png" data-size="960x720"
+                class="card-image hover-action-01">
+                <img class="lazyload fadein" src="https://i.gyazo.com/41fe34ff72cb4c869f590b5ea05811fd.png"
+                  data-src="https://i.gyazo.com/41fe34ff72cb4c869f590b5ea05811fd.png" alt="Image from Gyazo"
+                  width="1429" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">chat-space</div>
-                <div class="card-caption-info">Ruby on Rails </div>
+                <div class="card-caption-title">家庭教師WISEウェブサイト</div>
+                <div class="card-caption-info">Ruby on Rails × AWS(EC2 S3)</div>
+                <div class="card-caption-url"><a class="url-link" href="http://13.112.152.26/" target="_blank">Link</a>
+                </div>
               </div>
             </div>
             <div class="card">
