画像表示の変更

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,9 +86,11 @@
               </div>
             </div>
             <div class="card">
-              <a href="https://gyazo.com/65ed924734d71ff94f63e52d9623b1c2" data-size="960×720"
-                class="card-image hover-action-01"><img src="https://i.gyazo.com/65ed924734d71ff94f63e52d9623b1c2.png"
-                  alt="Image from Gyazo" width="1429" /></a>
+              <a href="https://i.gyazo.com/65ed924734d71ff94f63e52d9623b1c2.png" data-size="960×720"
+                class="card-image hover-action-01"><img class="lazyload fadein"
+                  　src="https://i.gyazo.com/65ed924734d71ff94f63e52d9623b1c2.png"
+                  data-src="https://i.gyazo.com/65ed924734d71ff94f63e52d9623b1c2.png" alt="Image from Gyazo"
+                  width="1429" /></a>
               <div class="card-caption">
                 <div class="card-caption-title">freemarket</div>
                 <div class="card-caption-info">Ruby on Rails×Jquery×AWS</div>
