--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
           <div class="section-body card-wrapper my-gallery">
             <div class="card">
               <a href="https://gyazo.com/d2636ee42da40d6105e535d7cac4f90e" data-size="960×720"
-                class="card-image hover-action-01"><img src="https://i.gyazo.com/d2636ee42da40d6105e535d7cac4f90e.png"
+                class="card-image hover-action-01"><img src="https://i.gyazo.com/d2636ee42da40d6105e535d7cac4f90e.png" N
                   alt="Image from Gyazo" width="1429" /></a>
               <div class="card-caption">
                 <div class="card-caption-title">The_sniper</div>
@@ -88,7 +88,7 @@
             <div class="card">
               <a href="https://i.gyazo.com/65ed924734d71ff94f63e52d9623b1c2.png" data-size="960×720"
                 class="card-image hover-action-01"><img class="lazyload fadein"
-                  　src="https://i.gyazo.com/65ed924734d71ff94f63e52d9623b1c2.png"
+                  src="https://i.gyazo.com/65ed924734d71ff94f63e52d9623b1c2.png"
                   data-src="https://i.gyazo.com/65ed924734d71ff94f63e52d9623b1c2.png" alt="Image from Gyazo"
                   width="1429" /></a>
               <div class="card-caption">
@@ -100,10 +100,10 @@
 
             </div>
             <div class="card">
-              <a href="https://i.gyazo.com/41fe34ff72cb4c869f590b5ea05811fd.png" data-size="960x720"
+              <a href="https://i.gyazo.com/0654ab59c02fe8bd97ef7811ed4c8704.png" data-size="960x720"
                 class="card-image hover-action-01">
-                <img class="lazyload fadein" src="https://i.gyazo.com/41fe34ff72cb4c869f590b5ea05811fd.png"
-                  data-src="https://i.gyazo.com/41fe34ff72cb4c869f590b5ea05811fd.png" alt="Image from Gyazo"
+                <img class="lazyload fadein" src="https://i.gyazo.com/0654ab59c02fe8bd97ef7811ed4c8704.png"
+                  data-src="https://i.gyazo.com/0654ab59c02fe8bd97ef7811ed4c8704.png" alt="Image from Gyazo"
                   width="1429" />
               </a>
               <div class="card-caption">
@@ -156,6 +156,39 @@
                 <br>Rails の Scaffold を利用して、CRUD 機能を実装しています<br>本番環境のDB:PostgreSQL<br>主要機能<br>
                 メモ投稿機能/投稿更新機能/投稿削除機能/<br>
                 Vue.jsによる非同期通信/投稿のためのモーダルWindow/表示絞り込み機能１／表示絞り込み機能2/マークダウン表示<br>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section" id="feature">
+        <div class="inner">
+          <div class="section-title-area">
+
+            <div class="section-intro">
+              1サイトの解説
+            </div>
+          </div>
+          <div class="section-body">
+            <div class="section-image">
+              <a href="http://13.112.152.26/" class="hover-action-01" target="_blank"><img
+                  src="https://i.gyazo.com/0654ab59c02fe8bd97ef7811ed4c8704.png" alt=""></a>
+            </div>
+            <div class="section-desc">
+              <div class="section-text">
+                <span class="text-bold">家庭教師センター講師検索サイト：</span><br>my_teacher<br><a href="#"
+                  target="_blank">http://13.112.152.26/</a><br><br>
+                <span class="text-bold">使用技術：</span><br>Ruby on Rails
+                AWS<br>
+                <br>
+                <span class="text-bold">version：</span><br>Ruby 2.5.1<br>
+                Ruby on Rails 5.0.7.2<br>
+                MySQL 3.28.0<br>
+                <br>
+                <br>
+                <br>ログインすると講師一覧が閲覧出来、コース別、科目別などで講師を検索出来ます<br>本番環境のDB:MySQL<br>主要機能<br>
+                講師登録機能/登録編集機能/登録削除機能/講師一覧表示/講師検索機能<br>
+                <br>
               </div>
             </div>
           </div>
