like_sample画像アップ

--- a/portfolio.html
+++ b/portfolio.html
@@ -114,8 +114,10 @@
               </div>
             </div>
             <div class="card">
-              <a href="img/works/fashion.jpg" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/company.jpg" alt="" />
+              <a href="https://i.gyazo.com/f869e43b06b413030ba2357b9089f4b3.png" data-size="960x720"
+                class="card-image hover-action-01">
+                <img class="lazyload fadein" src="https://i.gyazo.com/f869e43b06b413030ba2357b9089f4b3.png"
+                  data-src="https://i.gyazo.com/f869e43b06b413030ba2357b9089f4b3.png" alt="" />
               </a>
               <div class="card-caption">
                 <div class="card-caption-title">like_sample</div>
@@ -133,7 +135,7 @@
           <div class="section-title-area">
             <h2 class="section-title">FEATURE</h2>
             <div class="section-intro">
-              1サイトの解説
+              The_snipetの解説
             </div>
           </div>
           <div class="section-body">
@@ -166,7 +168,7 @@
           <div class="section-title-area">
 
             <div class="section-intro">
-              1サイトの解説
+              My_teacherの解説
             </div>
           </div>
           <div class="section-body">
