リンクの追加

--- a/portfolio.html
+++ b/portfolio.html
@@ -361,6 +361,9 @@
               <li><a href="https://github.com/higakikeita" target="_blank"><img
                     src="img/contact/GitHub-Mark-120px-plus.png" alt=""></a>
               </li>
+              <li><a href="https://github.com/higakikeita" target="_blank"><img
+                    src="img/contact/GitHub-Mark-120px-plus.png" alt=""></a>
+              </li>
             </ul>
             <section class="section" id="contact">
               <div class="inner">
@@ -373,6 +376,7 @@
                 <div class="section-body contact-wrapper">
                   <div class="contact-list">
                     <ul>
+
                       <li><a href="https://twitter.com/" target="_blank"><img src="img/contact/icon_tw.png" alt=""></a>
                       </li>
 
