--- a/portfolio.html
+++ b/portfolio.html
@@ -361,8 +361,8 @@
               <li><a href="https://github.com/higakikeita" target="_blank"><img
                     src="img/contact/GitHub-Mark-120px-plus.png" alt=""></a>
               </li>
-              <li><a href="https://github.com/higakikeita" target="_blank"><img
-                    src="img/contact/GitHub-Mark-120px-plus.png" alt=""></a>
+              <li><a href="https://lapras.com/public/SHEYLCN" target="_blank"><img src="img/skill/lapras.png"
+                    alt=""></a>
               </li>
             </ul>
             <section class="section" id="contact">
