--- a/portfolio.html
+++ b/portfolio.html
@@ -201,7 +201,7 @@
           <div class="section-title-area">
             <h2 class="section-title">ABOUT</h2>
             <div class="section-intro">
-              こんばんわ!
+              エンジニアを志すに至った経緯
             </div>
           </div>
           <div class="section-body">
@@ -213,13 +213,16 @@
                 中央大学法学部法律学科卒<br>
                 広告代理店勤務を経て、飲食店を起業<br>
                 7年ほど運営しましたが事業からは撤退<br>
-                その後、予備校の講師や派遣業務を経験<br>
+                その後、予備校の講師<br>
+                2019/8末までYoutubeチーム所属<br>
+                <br>
                 いろんな経験をしたおかげでもう失うものなんてないんじゃないかと(笑)
-                <br>プログラミングを始めたきっかけは、エンジニアになった友人の影響です。
-                作りたいものが形になることに面白さを感じています。
-                私は、自ら設定した目標に向けて、没頭する人と周囲から言われることが多いです。
-                例えば、予備校講師時代は英語を担当することが多かったですがが、更なる英語力向上のため、cebu留学を経験し、毎日フレーズ参考書や英語プレゼンの動画サイトで英語をインプットし、翌日の授業やスカイプレッスン等の会話で意識的にアウトプットしていました。成果として、2年半でTOEICのスコアを490点から875点まで伸ばすことができました。
-                この興味を持ったことに対して没頭できるという自身の特徴が、エンジニアという職種で活かされるのではないかと考えています。
+                <br>
+                <br>エンジニアを目指すようになったきっかけは前職において、今まで人が手がけてきた業務が日々自動化される様を目の当たりにし、自分も現在、人手をかけているような業務を自動化したりするツールを産み出す側に回りたいと考えたことでした。
+                2019年10月より、プログラミング学習を始め、「自走」することを常に意識し、自己解決能力をひたすら磨きながら、様々なアプリケーションの制作に取り組んできました。現在はユーザーの要望に応えられるようなアプリを意識して制作に取り組んでおりますが、より多くのユーザーを意識した開発を実務現場で経験し、その中で培うスキルを持って貴社に貢献していきたいと考えています。
+                自分の強みは前職までの経験でコミュニケーションを取りながら仕事を進め、難題をいくつか乗り越えた経験があるところです。YouTubeチームの業務においては年齢、国籍が違うメンバーが集っていましたが、週単位、月単位のタスクに合わせて、意識合わせを頻繁に行い、結果チームが30人規模から100人規模まで拡大することが出来ました。この現場において、コミュニケーションを取って意思の疎通を図り、計画性とスピード感を持って物事に対処する重要性を学びました。
+                現在、自分で記述したコードがプロダクトとして実際に動くことや、新しい学びを得るたびに実現出来る挙動が増えていくことに喜びを感じています。
+
               </div>
             </div>
           </div>
