dockerロゴ、説明追加

--- a/portfolio.html
+++ b/portfolio.html
@@ -328,7 +328,7 @@
                   <div class="rate rate4"></div>
                 </div>
                 <div class="section-text">
-                  チーム開発の制作物はAWSにてアップロードしています
+                  AWS使用技術はEC2,S3です
                 </div>
               </div>
             </div>
@@ -343,6 +343,21 @@
                 </div>
                 <div class="section-text">
                   静的なページをデプロイするために学習しています
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="skill-icon">
+                <img src="img/skill/docker2.png" alt="">
+              </div>
+              <div class="skill-desc">
+                <h3 class="skill-desc-title">Firebase</h3>
+                <div class="rating">
+                  <div class="rate rate3"></div>
+                </div>
+                <div class="section-text">
+                  dockerにて環境構築を行なっております
                 </div>
               </div>
             </div>
