ファイル変更

--- a/portfolio.html
+++ b/portfolio.html
@@ -352,7 +352,7 @@
                 <img src="img/skill/docker2.png" alt="">
               </div>
               <div class="skill-desc">
-                <h3 class="skill-desc-title">Firebase</h3>
+                <h3 class="skill-desc-title">Docker</h3>
                 <div class="rating">
                   <div class="rate rate3"></div>
                 </div>
